Fix align of anchor

--- a/book/style.css
+++ b/book/style.css
@@ -62,16 +62,20 @@ main.main-content,main.titlepage,div.footnotes{
   padding:1rem;
 }
 
-.sectionHead a.permalink {
+.permalink {
   opacity: 0.5;
   text-decoration: none;
   font-size: 0.75rem;
-  vertical-align: top;
   line-height: 0.8rem;
   margin-left: 0.25rem;
-  padding-top: 0.2rem;
   color: black;
   display: inline-block;
+}
+
+.sectionHead, .subsectionHead {
+  display: flex;
+  align-items: center;
+  align-content: center;
 }
 
 p.indent, p.noindent{
